--- a/week09/PTanofsky_Assignment9.rmd
+++ b/week09/PTanofsky_Assignment9.rmd
@@ -12,13 +12,48 @@ output: pdf_document
 
 The price of one share of stock in the Pilsdorff Beer Company (see Exercise 8.2.12) is given by $Y_n$ on the $n$th day of the year. Finn observes that the differences $X_n = Y_{n+1} - Y_n$ appear to be independent random variables with a common distribution having mean $\mu = 0$ and variance $\sigma^2 = 1/4$. If $Y_1 = 100$, estimate the probability that $Y_{365}$ is
 
-
 ## A: $\geq$ 100
+$$
+P(Y_{365}-Y_1 \geq 0)
+$$
+
+
+```{r warning=F,message=F}
+y.1 <- 100
+mu <- 0
+var <- 1/4
+sd <- sqrt(var)
+
+y.365 <- 100
+x.a <- (y.365 - y.1) / sqrt(365-1)
+a.result <- pnorm(x.a, mean = mu, sd = sd, lower.tail=F)
+a.result
+```
 
 ## B: $\geq$ 110
+$$
+P(Y_{365}-Y_1 \geq 10)
+$$
+
+```{r warning=F,message=F}
+y.365 <- 110
+x.b <- (y.365 - y.1) / sqrt(365-1)
+b.result <- pnorm(x.b, mean = mu, sd = sd, lower.tail=F)
+b.result
+```
 
 ## C: $\geq$ 120
 
+$$
+P(Y_{365}-Y_1 \geq 20)
+$$
+
+```{r warning=F,message=F}
+y.365 <- 120
+x.c <- (y.365 - y.1) / sqrt(365-1)
+c.result <- pnorm(x.c, mean = mu, sd = sd, lower.tail=F)
+c.result
+```
 
 # Problem 2
 
@@ -26,8 +61,156 @@ Calculate the expected value and variance of the binomial distribution using the
 
 ## Answer
 
+### Expected Value
+
+Binomial distribution: probability mass function
+
+$$
+P_X(j) = {n \choose x}p^xq^{n-x}\ with\ q=1-p
+$$
+
+Moment generating function definition
+
+$$
+M(t) = E(e^{tX}) = \sum_{x \epsilon S}^{} e^{tx}f(x)
+$$
+
+Substitute the binomial distribution function into mgf
+
+$$
+\begin{split}
+= \sum_{x=0}^{n} e^{tx}{n \choose x}p^xq^{n-x} \\
+= \sum_{x=0}^{n} (pe^t)^x{n \choose x}q^{n-x} \\
+= (q+pe^t)^n
+\end{split}
+$$
+
+The final equality represents the expansion of the binomial. Now, differentiate the moment generating function with respect to $t$ using the function-of-a-function rule, results in
+
+$$
+\begin{split}
+\frac{dM_x(t)}{dt}=n(q+pe^t)^{n-1}pe^t \\ = npe^t(q+pe^t)^{n-1}
+\end{split}
+$$
+
+Evaluate with $t=0$ results in expected value ...
+
+$$
+E(x)=np(q+p)^{n-1}=np
+$$
+
+### Variance
+
+To find the second moment, use the product rule
+
+$$
+\frac{duv}{dx} = u\frac{dv}{dx}+v\frac{du}{dx}
+$$
+
+expanding and substituting
+
+$$
+\begin{split}
+\frac{d^2M_x(t)}{dt^2}=npe^t \{(n-1)(q+pe^t)^{n-2}pe^t\} + (q+pe^t)^{n-1}\{npe^t\} \\ =npe^t(q+pe^t)^{n-2}\{(n-1)pe^t + (q+pe^t)\} \\ 
+= npe^t(q+pe^t)^{n-2}\{q+npe^t\}
+\end{split}
+$$
+
+Evaluate with $t=0$, results in
+
+$$
+E(x^2)=np(q+p)^{n-2}(q+np) \\ =np(q + np)
+$$
+
+Now, we can calculate the Variance
+
+$$
+V(x) = E(x2) - \{E(x)\}^2 \\ =np(q+np) -n^2p^2 \\ =npq
+$$
+
+Or, substituting for $q = 1-p$, variance is ...
+
+$$
+V(x) = np(1-p)
+$$
+
+Definitely took help from: https://www.le.ac.uk/users/dsgp1/COURSES/MATHSTAT/5binomgf.pdf
+
 # Problem 3
 
 Calculate the expected value and variance of the exponential distribution using the moment generating function.
 
 ## Answer
+Exponential distribution function is
+
+$$
+f(x)=\lambda e^{-\lambda x}
+$$
+
+with 
+
+$$
+f_{X}(x) = \begin{cases}
+  \lambda e^{-\lambda x}, & \text{if } x \geq 0, \\
+  0, & \text{otherwise}.
+\end{cases} 
+$$
+
+Moment generating function is
+
+$$
+M_x(t)=E(e^tX)= \int_{-\infty}^{\infty}e^{tx}f_X(x)dx
+$$
+
+Now, integrating by method of substitution
+
+$$
+\begin{split}
+M_X(t) = \int_{-\infty}^{\infty}e^{tx}\lambda e^{-\lambda x}dx \\ 
+=\lambda \int_{0}^{\infty}e^{(t-\lambda)x}dx \\ 
+= \frac{\lambda}{t-\lambda}\ provided\ that\ |t| < \lambda
+\end{split}
+$$
+
+Define theorem, if $X$ has mgf $M_X(t)$, then
+
+$$
+E(X^n)=M_X^{(n)}(0)
+\\
+where
+\\
+M_X^{(n)}(0) = \frac{d^n}{dt^n}M_X(t)|_0
+$$
+
+That means, the n-th moment is equal to the n-th derivative of the mgf evaluated at $t=0$.
+
+Now using above theorem, evaluate the first and second moments
+
+First Moment
+
+$$
+E(X) = M_X^{(1)}(0) = \frac{\lambda}{(\lambda-t)^2}|_{t=0} = \frac{1}{\lambda}
+$$
+
+Second Moment
+
+$$
+E(X^2) = M_X^{(2)}(0) = \frac{2\lambda}{(\lambda-t)^3}|_{t=0} = \frac{2}{\lambda^2}
+$$
+
+### Expected Value
+
+From first moment, expected value is
+$$
+E(X) = \frac{1}{\lambda}
+$$
+
+### Variance
+
+Based on first and second moment, variance is
+$$
+var(X) = E(X^2) - [E(X)]^2 = \frac{2}{\lambda^2} - \frac{1}{\lambda^2} = \frac{1}{\lambda^2}
+$$
+
+
+Definitely took help from: http://www.maths.qmul.ac.uk/~bb/MS_Lectures_5and6.pdf
